--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,7 @@ nav {
     width: 100%;
     display: inline-flex;
     justify-content:space-around;
+    align-items: center;
     padding: 2rem;
     background-color: rgb(23, 2, 1);
     color: white;
@@ -22,6 +23,11 @@ nav {
 
 .item-menu li {
     margin-left: 1rem;
+    
+}
+.item-menu li:hover{
+    color: brown;
+    transition: color  0.3s;
 }
 main
 section{
